--- a/views/manifesto.erb
+++ b/views/manifesto.erb
@@ -7,9 +7,14 @@
 	<div class="callToAction">
 		Stop Rewriting. Start Refactoring.
 	</div>
+	<ul id="authors">
+		<li>Bas Vodde</li>
+		<li>Lasse Koskela</li>
+	</ul>
 </div>
 <div id="signing">
 	<div class="callToSignUp">
 		To date, a total of <%= @number_of_signatories %> people have signed this manifesto. We have done so to voice our concern over the state of practice and our passion towards the profession of software development. We want to feel proud of our work and see our products stand the test of time, serving their users and developers alike. <a class="signUpLink" href="signatories">Join us!</a>
 	</div>
 </div>
+<div id="attributions">This manifesto was inspired by and shamelessly copied and repurposed from <a href="http://www.platform21.nl/download/4453">Platform21's Repair Manifesto</a>.</div>
