--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,15 +7,17 @@
 			Refactoring Manifesto - Because the world needs better code
 		</title>
 		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+		<script src="js/jquery-1.4.4.min.js" type="text/javascript"></script>
+		<script src="js/browsersupport.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div id="content">
 			<a name="top"></a>
 			<h1 class="title">
 				<a href=".">Refactoring Manifesto
-				<div class="tagline">
+				<span class="tagline">
 					Because the world needs better code
-				</div></a>
+				</span></a>
 			</h1>
 			<%= yield %>
 		</div>
