Fix the call to action on signatories page. We forgot to translate it on both pages...

--- a/views/signatories.erb
+++ b/views/signatories.erb
@@ -1,6 +1,6 @@
 <div id="signing">
 	<div class="callToAction">
-		Stop Recycling. Start Repairing.
+		Stop Rewriting. Start Refactoring.
 	</div>
 	<div class="callToSignUp">
 		To date, a total of <%= @signatories.size %> people have signed this manifesto. We have done so to voice our concern over the state of practice and our passion towards the profession of software development. We want to feel proud of our work and see our products stand the test of time, serving their users and developers alike.
