--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -30,6 +30,14 @@
 	font-style: normal;
 }
 
+@font-face {
+	font-family: 'NotethisRegular';
+	src: url('../fonts/notethis-webfont.eot');
+	src: local('☺'), url('../fonts/notethis-webfont.woff') format('woff'), url('../fonts/notethis-webfont.ttf') format('truetype'), url('../fonts/notethis-webfont.svg#webfontIKlAdwub') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 /* Regular CSS styles from now on... */
 
 #content {
@@ -68,7 +76,7 @@ ol.commandments {font: 24px/28px 'Puritan20Bold', Arial, sans-serif;}
 #signing input {font:18px/24px 'Puritan20Normal', Arial, sans-serif;}
 #signing input.text {width: 400px;}
 #signatories {clear:both;float:left;margin-top:50px;}
-#signatories li {font:28px/37px 'JournalRegular', Arial, sans-serif;}
+#signatories li {font:28px/37px 'NotethisRegular', Arial, sans-serif;}
 #signatories .backToTop {display:block;margin-bottom:120px;}
 
 #attributions, #attributions * {font:10px/10px 'Puritan20Normal', Arial, sans-serif;color:black;text-decoration:none;}
