--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -80,3 +80,8 @@ ol.commandments {font: 24px/28px 'Puritan20Bold', Arial, sans-serif;}
 #signatories .backToTop {display:block;margin-bottom:120px;}
 
 #attributions, #attributions * {font:10px/10px 'Puritan20Normal', Arial, sans-serif;color:black;text-decoration:none;}
+
+/* Administration */
+#admin .signatories li:hover {background:#ddd;}
+a.delete {display:block;float:right;background:url(../images/delete.png) no-repeat;overflow:hidden;height:16px;width:16px;}
+a.delete span {display:none;}
