Add authentication-protected admin page for removing signees.

--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,5 +1,6 @@
 <div id="admin">
 	<h2>Manifesto Administration</h2>
+	Logged in as <%= @user.username %><a href="/logout">Log out</a>
 	<div class="callToSignUp">
 		The following <%= @signatories.size %> people have signed this manifesto:
 	</div>
