--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,8 @@
 		</title>
 		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
 		<script src="js/jquery-1.4.4.min.js" type="text/javascript"></script>
+		<script src="js/jquery.form.js" type="text/javascript"></script>
+		<script src="js/jquery.sha1.js" type="text/javascript"></script>
 		<script src="js/browsersupport.js" type="text/javascript"></script>
 	</head>
 	<body>
