Make login page hash the password before submit using SHA-1. (Better than nothing while we don't have SSL for the login.)

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,3 +1,11 @@
+<script type="text/javascript">
+$(document).ready(function() {
+	$('#login_form').submit(function() {
+		var passwordField = $('#login_form :password');
+		passwordField.val($.sha1(passwordField.val()));
+	});
+});
+</script>
 <div id="login">
 	<div class="loginForm">
 		<form id="login_form" method="post" action="/login">
