--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -23,14 +23,6 @@
 }
 
 @font-face {
-	font-family: 'JournalRegular';
-	src: url('../fonts/journal-webfont.eot');
-	src: local('☺'), url('../fonts/journal-webfont.woff') format('woff'), url('../fonts/journal-webfont.ttf') format('truetype'), url('../fonts/journal-webfont.svg#webfontlL8SNmS2') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
 	font-family: 'NotethisRegular';
 	src: url('../fonts/notethis-webfont.eot');
 	src: local('☺'), url('../fonts/notethis-webfont.woff') format('woff'), url('../fonts/notethis-webfont.ttf') format('truetype'), url('../fonts/notethis-webfont.svg#webfontIKlAdwub') format('svg');
@@ -56,7 +48,7 @@
 #signing .callToSignUp a.signUpLink {font-weight:bold;}
 
 /* Authors */
-#authors {font: 20px/24px 'DanielRegular', Arial, sans-serif;clear:both;}
+#authors {font: 20px/24px 'NotethisRegular', Arial, sans-serif;clear:both;}
 #authors li {display:block;float:right;margin-right:30px;white-space:nowrap;}
 
 /* Page template */
