--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -74,6 +74,9 @@ ol.commandments {font: 24px/28px 'Puritan20Bold', Arial, sans-serif;}
 #attributions, #attributions * {font:10px/10px 'Puritan20Normal', Arial, sans-serif;color:black;text-decoration:none;}
 
 /* Administration */
+#admin h2 {float:left;}
+#admin .loginInformation {float:right;}
+#admin .callToSignUp {clear:both;}
 #admin .signatories li:hover {background:#ddd;}
 #admin .signatoryName {font: 20px/24px 'NotethisRegular', Arial, sans-serif;}
 a.delete {display:block;float:right;background:url(../images/delete.png) no-repeat;overflow:hidden;height:16px;width:16px;}
